--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<link rel="stylesheet" type="text/css" href="Travel style.css">
+    	<link rel="stylesheet" type="text/css" href="style.css">
     	<title>Travel escape</title>
     <head>
     	
